  Tuvell for the suggestion.

  Fix bug 1576609 - "Accept Cookie" rules too strict. I've relaxed the
  rules about what cookie domains are acceptable to The Grinder, better to
  align it with current browser implementations. Thanks to Bryan Cornies for
  the report.

  Fix bug 1580340 - Can't invoke static methods through a wrapped Java class.


The Grinder 3.1
---------------

  The console now has a "-headless" option which causes it to start
  without the graphical user interface. This is useful when used with
  the console client API.

  Add ConsoleConnection.stopAgents(), requested by Andreas Spall.

  Refine console sampling model:
  - Fix bug 1618759 - Console should not discard first sample.
  - Count empty samples when deciding when to stop recording.
  - Count empty samples when triggered and ignoring samples.
  - Display sample data when triggered and ignoring samples.

  Relative paths set for grinder.script are now resolved relative to
  the location of the properties file. This fixes two bugs. - Bug
  1889281 - grinder.script relative path bug. Thanks to Ross Nicholson
  for the report, and the suggested fix. - Bug 1875880 - Script
  validation wrong for properties file in sub directory.

  HTTP Digest Authentication example from Matt Moran.

  German console translation updates from Matthias Dillier.

  Italian console translation updates from Meo Bogliolo.

  French console translation updates from Tagnon Soko.

  Fulfil feature request 1891023 - Worker and Agent id's. The script
  context has new getAgentNumber() and getProcessNumber() methods.
  getThreadID() has been renamed to getThreadNumber() for consistency.
  Thanks to Ross Nicholson for requesting this feature.

  Fix bug 1897988 - grinder.initialSleepTime issue. The
  initialSleepTime property was broken. Thanks to whoever reported
  this.

  Fix bug 1893027 - ArrayIndexOutOfBoundsException in TCPProxy. Thanks
  to Brian Dols for reporting this.
